<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#3E80B4"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/lbl_titulua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/zorionak"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/irabazi_duzu"
        app:srcCompat="@drawable/ic_irabazle" />

    <TextView
        android:id="@+id/lbl_galdera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/berriz_jolastu_nahi_duzu"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_bai"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/bai"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_ez"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/ez"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>